# libedhoc

./: .buildinfo  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ChangeLog  Kconfig  LICENSE  Makefile  README.md  SECURITY.md  api.html  changelog.html  codecov.yml  configuration.html  genindex.html  index.html  introduction.html  links.html  module_tests.html  objects.inv  release.json  search.html  searchindex.js  testing.html  values.html  west.yml
.doctrees/: api.doctree  (+9 more)
backends/: CMakeLists.txt
backends/cbor/include/: backend_cbor_bstr_type_decode.h  backend_cbor_bstr_type_encode.h  backend_cbor_bstr_type_types.h  backend_cbor_connection_identifier_decode.h  backend_cbor_connection_identifier_encode.h  backend_cbor_connection_identifier_types.h  backend_cbor_credentials_types.h  backend_cbor_ead_decode.h  backend_cbor_ead_encode.h  backend_cbor_ead_types.h  backend_cbor_edhoc_types.h  backend_cbor_enc_structure_decode.h  backend_cbor_enc_structure_encode.h  backend_cbor_enc_structure_types.h  backend_cbor_error_decode.h  backend_cbor_error_encode.h  backend_cbor_error_types.h  backend_cbor_header_map_decode.h  backend_cbor_header_map_encode.h  backend_cbor_id_cred_x_decode.h  backend_cbor_id_cred_x_encode.h  backend_cbor_id_cred_x_types.h  backend_cbor_info_decode.h  backend_cbor_info_encode.h  backend_cbor_info_types.h  backend_cbor_int_type_decode.h  backend_cbor_int_type_encode.h  backend_cbor_int_type_types.h  backend_cbor_message_1_decode.h  backend_cbor_message_1_encode.h  backend_cbor_message_1_types.h  backend_cbor_message_2_decode.h  backend_cbor_message_2_encode.h  backend_cbor_message_2_types.h  backend_cbor_message_3_decode.h  backend_cbor_message_3_encode.h  backend_cbor_message_3_types.h  backend_cbor_message_4_decode.h  backend_cbor_message_4_encode.h  backend_cbor_message_4_types.h  (+26 more)
backends/cbor/src/: backend_cbor_bstr_type_decode.c  backend_cbor_bstr_type_encode.c  backend_cbor_connection_identifier_decode.c  backend_cbor_connection_identifier_encode.c  backend_cbor_ead_decode.c  backend_cbor_ead_encode.c  backend_cbor_enc_structure_decode.c  backend_cbor_enc_structure_encode.c  backend_cbor_error_decode.c  backend_cbor_error_encode.c  backend_cbor_header_map_decode.c  backend_cbor_header_map_encode.c  backend_cbor_id_cred_x_decode.c  backend_cbor_id_cred_x_encode.c  backend_cbor_info_decode.c  backend_cbor_info_encode.c  backend_cbor_int_type_decode.c  backend_cbor_int_type_encode.c  backend_cbor_message_1_decode.c  backend_cbor_message_1_encode.c  backend_cbor_message_2_decode.c  backend_cbor_message_2_encode.c  backend_cbor_message_3_decode.c  backend_cbor_message_3_encode.c  backend_cbor_message_4_decode.c  backend_cbor_message_4_encode.c  backend_cbor_message_error_decode.c  backend_cbor_message_error_encode.c  backend_cbor_plaintext_2_decode.c  backend_cbor_plaintext_2_encode.c  backend_cbor_plaintext_2b_decode.c  (+13 more)
helpers/: CMakeLists.txt
helpers/include/: cipher_suite_0.h  cipher_suite_2.h  edhoc_cipher_suite_0.h  edhoc_cipher_suite_2.h  edhoc_cipher_suite_24.h  edhoc_cipher_suite_4.h  edhoc_exp_pqc_cipher_suite_1.h  edhoc_helpers.h
helpers/src/: cipher_suite_2.c  edhoc_cipher_suite_0.c  edhoc_cipher_suite_2.c  edhoc_cipher_suite_24.c  edhoc_exp_pqc_cipher_suite_1.c  edhoc_helpers.c  edhoc_kdf_kmac256_xkcp.c
include/: CMakeLists.txt  edhoc.h  edhoc_common.h  edhoc_context.h  edhoc_credentials.h  edhoc_crypto.h  edhoc_ead.h  edhoc_log.h  edhoc_macros.h  edhoc_test_hooks.h  edhoc_values.h
include/edhoc/: cipher_suite.h  coap.h  credentials.h  crypto.h  ead.h  edhoc.h  edhoc_cipher_suite.h  edhoc_coap.h  edhoc_context.h  edhoc_crypto.h  edhoc_macros.h  edhoc_platform.h  edhoc_types.h  platform.h  types.h  values.h
sample/benchmark/: CMakeLists.txt  prj.conf  sample.yaml  user-mbedtls.h
tests/: CMakeLists.txt  test_invariant_edhoc_cipher_suite_2.c  test_main.c
tests/fuzz/: CMakeLists.txt  fuzz_message_1_process.c  fuzz_message_2_process.c  fuzz_message_3_process.c  fuzz_message_4_process.c  fuzz_message_error_process.c
tests/include/: cipher_suite_0.h  cipher_suite_2.h  test_credentials.h  test_crypto.h  test_edhoc_ead.h  test_edhoc_exporter.h  test_edhoc_x509_chain.h  test_edhoc_x509_hash.h  test_edhoc_x509_kid.h  test_mbedtls_crypto.h  test_vector_draft_edhoc_psk.h  test_vector_ml_dsa_44_keypair.h  test_vector_rfc9529_chapter_2.h  test_vector_rfc9529_chapter_3.h  test_vector_x5chain_sign_keys_suite_0.h  test_vector_x5chain_sign_keys_suite_2.h  test_vector_x5chain_sign_keys_suite_24.h  test_vector_x5chain_sign_keys_suite_pqc_1.h  test_vector_x5chain_static_dh_keys_suite_2.h  test_vector_x5t_sign_keys_suite_2.h  test_vectors_p256_v16.h
tests/integration/: test_handshake_auth_methods.c  test_handshake_handle_balance.c  test_handshake_x5chain_dh_suite2.c  test_handshake_x5chain_sig_suite0.c  test_handshake_x5chain_sig_suite2.c  test_handshake_x5chain_sig_suite24.c  test_handshake_x5chain_sig_suite_pqc_1.c  test_handshake_x5t_sig_suite2.c  test_mem_custom.c  test_rfc9528_negotiation.c  test_rfc9529_chapter2.c  test_rfc9529_chapter3.c
tests/src/: cipher_suite_0.c  cipher_suite_2.c  module_test_api.c  module_test_cipher_suite_0.c  module_test_cipher_suite_2.c  module_test_draft_edhoc_psk.c  module_test_edhoc_helpers.c  module_test_error_message.c  module_test_main.c  module_test_rfc9528_suites_negotiation.c  module_test_rfc9529_chapter_2.c  module_test_rfc9529_chapter_3.c  module_test_x5chain_sign_keys_suite_0.c  module_test_x5chain_sign_keys_suite_2.c  module_test_x5chain_static_dh_keys_suite_2.c  module_test_x5t_sign_keys_suite_2.c  test_credentials.c  test_crypto.c  test_edhoc_ead.c  test_edhoc_exporter.c  test_edhoc_x509_chain.c  test_edhoc_x509_hash.c  test_edhoc_x509_kid.c  test_mbedtls_crypto.c  tests.c
tests/unit/: test_api.c  test_api_negative.c  test_coverage.c  test_crypto_suite0.c  test_crypto_suite2.c  test_error_message.c  test_exporters.c  test_helpers.c  test_internals.c  test_message_paths.c
zephyr/: CMakeLists.txt  module.yml
(+259 files in other folders)
